Use versioned Buildah task
(cherry picked from commit e48f19ffd3de7dea7a44a042574c9f1998c2edb5)

--- a/04-pipelines/01-build-deploy-pipeline.yaml
+++ b/04-pipelines/01-build-deploy-pipeline.yaml
@@ -15,7 +15,7 @@ spec:
   tasks:
   - name: build-image
     taskRef:
-      name: buildah
+      name: buildah-v0-8-0
       kind: ClusterTask
     resources:
       inputs:
